# phas0100_week10_mpi

./: CMakeLists.txt  README.md
collective/: CMakeLists.txt  reduce.cpp  scatter.cpp
collective/solution/: reduce.cpp
hello/: CMakeLists.txt  hello.cpp  helloCatch.cpp
hello/solution/: CMakeLists.txt  helloCatch.cpp
point2point/: CMakeLists.txt  ring.cpp
point2point/solution/: ring.cpp
